--- a/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
@@ -52,26 +52,11 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Monday" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font></Label>
-                  <Label text="Tuesday" GridPane.columnIndex="2" GridPane.rowIndex="1">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font></Label>
-                  <Label text="Wednesday" GridPane.columnIndex="3" GridPane.rowIndex="1">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font></Label>
-                  <Label text="Thursday" GridPane.columnIndex="4" GridPane.rowIndex="1">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font></Label>
-                  <Label text="Friday" GridPane.columnIndex="5" GridPane.rowIndex="1">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font></Label>
+                  <Label text="Monday" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label text="Tuesday" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Label text="Wednesday" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                  <Label text="Thursday" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                  <Label text="Friday" GridPane.columnIndex="5" GridPane.rowIndex="1" />
                </children>
             </GridPane>
             <Pane>
