--- a/app/src/main/resources/ScheduleGnome/compareSchedules.fxml
+++ b/app/src/main/resources/ScheduleGnome/compareSchedules.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -11,13 +12,13 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.CompareFXMLController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.CompareFXMLController">
    <children>
-      <SplitPane dividerPositions="0.5" layoutX="16.0" layoutY="12.0" orientation="VERTICAL" prefHeight="434.0" prefWidth="680.0">
+      <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="600.0" prefWidth="680.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="217.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <GridPane fx:id="calGrid1" gridLinesVisible="true" layoutX="-1.0" opacity="0.75" prefHeight="212.0" prefWidth="678.0">
+                  <GridPane fx:id="calGrid1" gridLinesVisible="true" layoutX="-1.0" opacity="0.75" prefHeight="250.0" prefWidth="678.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -28,12 +29,6 @@
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -76,7 +71,7 @@
             </AnchorPane>
           <AnchorPane minHeight="217.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <GridPane fx:id="calGrid2" gridLinesVisible="true" opacity="0.75" prefHeight="209.0" prefWidth="678.0">
+                  <GridPane fx:id="calGrid2" gridLinesVisible="true" opacity="0.75" prefHeight="250.0" prefWidth="678.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -103,6 +98,9 @@
                </children>
             </AnchorPane>
         </items>
+         <padding>
+            <Insets left="15.0" top="15.0" />
+         </padding>
       </SplitPane>
       <Button id="compareHomeButton" layoutX="705.0" layoutY="14.0" mnemonicParsing="false" onAction="#clickHome" text="Home" />
       <Button layoutX="205.0" layoutY="-30.0" mnemonicParsing="false" text="Button" />
