--- a/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
@@ -10,17 +10,17 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="CENTER" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.searchFXMLController">
+<GridPane alignment="CENTER" gridLinesVisible="true" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.searchFXMLController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints maxHeight="305.0" minHeight="10.0" prefHeight="43.199990844726564" valignment="TOP" vgrow="NEVER" />
-      <RowConstraints maxHeight="563.7777690887451" minHeight="0.0" prefHeight="267.20000915527345" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="563.7777690887451" minHeight="10.0" prefHeight="292.59999999999997" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="305.0" minHeight="0.0" prefHeight="0.0" valignment="TOP" vgrow="NEVER" />
+      <RowConstraints maxHeight="563.7777690887451" minHeight="0.0" prefHeight="250.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="563.7777690887451" minHeight="10.0" prefHeight="350.2000244140625" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <GridPane fx:id="calGrid" GridPane.rowIndex="1">
+      <GridPane fx:id="calGrid" GridPane.rowIndex="1" GridPane.vgrow="NEVER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="75.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="145.0" />
@@ -66,8 +66,8 @@
          </columnConstraints>
          <rowConstraints>
             <RowConstraints maxHeight="105.39998168945313" minHeight="9.800013160705568" prefHeight="48.40000610351562" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="155.39998683929443" minHeight="0.0" prefHeight="42.400018310546855" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="199.19998168945312" minHeight="10.0" prefHeight="199.19998168945312" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="155.39998683929443" minHeight="0.0" prefHeight="13.200022888183597" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="259.1999771118164" minHeight="10.0" prefHeight="259.1999771118164" vgrow="ALWAYS" />
          </rowConstraints>
          <padding>
             <Insets left="15.0" right="20.0" />
@@ -75,12 +75,12 @@
          <children>
             <TextField id="searchBar" fx:id="searchField" promptText="Search for courses" GridPane.columnSpan="2147483647">
                <GridPane.margin>
-                  <Insets left="50.0" right="50.0" />
+                  <Insets bottom="10.0" left="50.0" right="50.0" />
                </GridPane.margin>
             </TextField>
             <ListView fx:id="searchList" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
                <GridPane.margin>
-                  <Insets bottom="10.0" />
+                  <Insets bottom="10.0" top="10.0" />
                </GridPane.margin>
             </ListView>
             <ComboBox fx:id="departmentChoice" onAction="#search" prefWidth="150.0" promptText="Department" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
@@ -92,6 +92,9 @@
             <ComboBox fx:id="startTimeChoice" onAction="#search" prefWidth="150.0" promptText="Starts After" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
             <Button id="searchExcButton" mnemonicParsing="false" onAction="#addOwn" prefHeight="21.0" prefWidth="110.0" text="+ Extracurricular" GridPane.rowIndex="1" GridPane.valignment="TOP" />
          </children>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
       </GridPane>
       <Button id="searchBackButton" fx:id="backButton" minWidth="53.0" mnemonicParsing="false" onAction="#back" prefHeight="35.0" prefWidth="53.0" text="Back" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
          <GridPane.margin>
